Topic/topic_practice_ws/log/build_2025-06-06_22-28-37/status_publisher/stderr.log
  File "/home/duan/Code/Duan-Ros2/Topic/topic_practice_ws/install/status_publisher/lib/python3.10/site-packages/status_publisher/sys_status_pub.py", line 9
    self.status_publisher_ := self.create_publisher(
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot use assignment expressions with attribute

